--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>QikNotes</title>
-  <base href="/">
+  <base href="/QikNotes/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self';">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
